-เติมคลาส -เปลี่ยนชื่อ -สร้าง var ของสี

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
     <nav>
         <ul>
             <li>
-                <a href="#about">เกี่ยวกับผม</a>
+                <a class="nav-menu" href="#about">เกี่ยวกับผม</a>
             </li>
             <li>
-                <a href="#edu">การศีกษาและประสบการณ์</a>
+                <a class="nav-menu" href="#edu">การศีกษาและประสบการณ์</a>
             </li>
             <li>
-                <a href="#skill">ทักษะและภาษา</a>
+                <a class="nav-menu" href="#skill">ทักษะและภาษา</a>
             </li>
             <li>
-                <a href="#awards">ผลงานและความสนใจ</a>
+                <a class="nav-menu" href="#awards">ผลงานและความสนใจ</a>
             </li>
         </ul>
     </nav>
