-เพิ่มเนื้อหาส่วน header -จัดเนื้อหาด้วย flex

--- a/index.html
+++ b/index.html
@@ -33,6 +33,23 @@
             </li>
         </ul>
     </nav>
+    <header>
+        <div class="left">
+            <p>สวัสดีครับ, ผมชื่อ</p>
+            <h1>ภานุวัตร ขันนาแล</h1>
+            <h4>Web Developer Student</h4>
+        </div>
+        <div class="right">
+            <h2>ภานุวัตร ขันนาแล</h2>
+            <p>IoT Engineer</p>
+            <address>Bangkok, Thailand</address>
+            <a href=""></a>
+            <address>
+                <a href="mailto:panumataeh@gmail.com">panumataeh@gmail.com</a> <br>
+                <a href="tel:0961983050">096-1983050</a>
+            </address>
+        </div>
+    </header>
 
 </body>
 
