-เพิ่มรูป profile , background -เพิ่มลิ้ง CV

--- a/index.html
+++ b/index.html
@@ -40,14 +40,16 @@
             <h4>Web Developer Student</h4>
         </div>
         <div class="right">
+            <img src="img/profile.jpg" alt="Panuwat Khannalae">
             <h2>ภานุวัตร ขันนาแล</h2>
             <p>IoT Engineer</p>
             <address>Bangkok, Thailand</address>
             <a href=""></a>
             <address>
                 <a href="mailto:panumataeh@gmail.com">panumataeh@gmail.com</a> <br>
-                <a href="tel:0961983050">096-1983050</a>
+                <a href="tel:0961983050">Tel: 096-1983050</a>
             </address>
+            <a class="download" href="./asset/Panuwat K.,CV (1).pdf" target="_blank">Download CV</a>
         </div>
     </header>
 
