-เพิ่มรูป in, fackbook -ใส่ tag[a] ให้ in, fackbook

--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
                 <a href="mailto:panumataeh@gmail.com">panumataeh@gmail.com</a> <br>
                 <a href="tel:0961983050">Tel: 096-1983050</a>
             </address>
+            <div class="social">
+                <a href="https://www.linkedin.com/in/panuwat-khannalae-074b19209/" target="_blank"><img
+                        src="./img/linkin.webp" alt="linkin"></a>
+                <a href="https://www.facebook.com/panuwat.khannalae" target="_blank"><img src="./img/facebook.webp"
+                        alt="facebook"></a>
+            </div>
             <a class="download" href="./asset/Panuwat K.,CV (1).pdf" target="_blank">Download CV</a>
         </div>
     </header>
