--- a/index.html
+++ b/index.html
@@ -35,9 +35,13 @@
     </nav>
     <header>
         <div class="left">
-            <p>สวัสดีครับ, ผมชื่อ</p>
-            <h1>ภานุวัตร ขันนาแล</h1>
-            <h4>Web Developer Student</h4>
+            <div class="bg-filter">
+                <div class="hello">
+                    <p class="reset-margin">สวัสดีครับ, ผมชื่อ</p>
+                    <h1 class="reset-margin">ภานุวัตร ขันนาแล</h1>
+                    <h4>Web Developer Student</h4>
+                </div>
+            </div>
         </div>
         <div class="right">
             <img src="img/profile.jpg" alt="Panuwat Khannalae">
