- เพิ่ม class contact - จัด layout

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h2>ภานุวัตร ขันนาแล</h2>
             <p>IoT Engineer</p>
             <address>Bangkok, Thailand</address>
-            <address>
+            <address class="contact">
                 <a href="mailto:panumataeh@gmail.com">panumataeh@gmail.com</a> <br>
                 <a href="tel:0961983050">Tel: 096-1983050</a>
             </address>
