- ใส่ข้อมูล html เกี่ยวกับผมม การศึกษาและประสบการณ์ - จัด layout

--- a/index.html
+++ b/index.html
@@ -18,49 +18,106 @@
 
 <body>
     <nav>
-        <ul>
-            <li>
-                <a class="nav-menu" href="#about">เกี่ยวกับผม</a>
-            </li>
-            <li>
-                <a class="nav-menu" href="#edu">การศีกษาและประสบการณ์</a>
-            </li>
-            <li>
-                <a class="nav-menu" href="#skill">ทักษะและภาษา</a>
-            </li>
-            <li>
-                <a class="nav-menu" href="#awards">ผลงานและความสนใจ</a>
-            </li>
-        </ul>
+        <div class="container">
+            <ul>
+                <li>
+                    <a class="nav-menu" href="#about">เกี่ยวกับผม</a>
+                </li>
+                <li>
+                    <a class="nav-menu" href="#edu">การศีกษาและประสบการณ์</a>
+                </li>
+                <li>
+                    <a class="nav-menu" href="#skill">ทักษะและภาษา</a>
+                </li>
+                <li>
+                    <a class="nav-menu" href="#awards">ผลงานและความสนใจ</a>
+                </li>
+            </ul>
+        </div>
     </nav>
     <header>
-        <div class="left">
-            <div class="bg-filter">
-                <div class="hello">
-                    <p class="reset-margin">สวัสดีครับ, ผมชื่อ</p>
-                    <h1 class="reset-margin">ภานุวัตร ขันนาแล</h1>
-                    <h4>Web Developer Student</h4>
+        <div class="container">
+            <div class="left">
+                <div class="bg-filter">
+                    <div class="hello">
+                        <p class="reset-margin">สวัสดีครับ, ผมชื่อ</p>
+                        <h1 class="reset-margin">ภานุวัตร ขันนาแล</h1>
+                        <h4>Web Developer Student</h4>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="right">
-            <img src="img/profile.jpg" alt="Panuwat Khannalae">
-            <h2>ภานุวัตร ขันนาแล</h2>
-            <p>IoT Engineer</p>
-            <address>Bangkok, Thailand</address>
-            <address class="contact">
-                <a href="mailto:panumataeh@gmail.com">panumataeh@gmail.com</a> <br>
-                <a href="tel:0961983050">Tel: 096-1983050</a>
-            </address>
-            <div class="social">
-                <a href="https://www.linkedin.com/in/panuwat-khannalae-074b19209/" target="_blank"><img
-                        src="./img/linkin.webp" alt="linkin"></a>
-                <a href="https://www.facebook.com/panuwat.khannalae" target="_blank"><img src="./img/facebook.webp"
-                        alt="facebook"></a>
+            <div class="right">
+                <img src="img/profile.jpg" alt="Panuwat Khannalae">
+                <h2>ภานุวัตร ขันนาแล</h2>
+                <p>IoT Engineer</p>
+                <address>Bangkok, Thailand</address>
+                <address class="contact">
+                    <a href="mailto:panumataeh@gmail.com">panumataeh@gmail.com</a> <br>
+                    <a href="tel:0961983050">Tel: 096-1983050</a>
+                </address>
+                <div class="social">
+                    <a href="https://www.linkedin.com/in/panuwat-khannalae-074b19209/" target="_blank"><img
+                            src="./img/linkin.webp" alt="linkin"></a>
+                    <a href="https://www.facebook.com/panuwat.khannalae" target="_blank"><img src="./img/facebook.webp"
+                            alt="facebook"></a>
+                </div>
+                <a class="download" href="./asset/Panuwat K.,CV (1).pdf" target="_blank">Download CV</a>
             </div>
-            <a class="download" href="./asset/Panuwat K.,CV (1).pdf" target="_blank">Download CV</a>
         </div>
     </header>
+    <main>
+        <div class="container">
+            <section class="section-1">
+                <h2 id="about">เกี่ยวกับผม</h2>
+                <p>I like to learn new things and can research require knowledge on my own.</p>
+            </section>
+            <section class="section-2">
+                <div class="edu-left">
+                    <h2 id="edu">การศึกษา</h2>
+                    <div class="blchelor-degree">
+                        <h4>2013-2017</h4>
+                        <p>Rajamangala University of Technology Lanna Lampang</p>
+                        <p>Bachelor Degree, Industrial Elctrical Technology</p>
+                        <p>GPA: 3.29</p>
+                    </div>
+                    <div class="advanced-cer">
+                        <h4>2011-2013</h4>
+                        <p>Lampang Technical College</p>
+                        <p>Advanced Certificate, Electric</p>
+                        <p>GPA: 2.27</p>
+                    </div>
+                </div>
+                <div class="wrapper"></div>
+                <div class="exp-right">
+                    <h2>ประสบการณ์</h2>
+                    <div class="syslink">
+                        <h4>Dec. 2019-April 2022</h4>
+                        <p>Syslink Technology Co.,Ltd</p>
+                        <p>IoT Engineer</p>
+                        <p>- Planing with the team and determining how to make things done. <br>
+                            - Prepare documents and report to team leader. <br>
+                            - Work together with the team and contractor.<br>
+                            - Solve problems on-site to make work complete.<br>
+                            - Training how to use device usage.<br>
+                            - Commissioning project.<br>
+                            - Manage in area of house and condo.</p>
+                    </div>
+                    <div class="exp-right">
+                        <div class="rueang-witthaya">
+                            <h4>April 2019-Sep. 2022</h4>
+                            <p>Rueang Witthaya Ltd.</p>
+                            <p>Technician</p>
+                            <p>- Take care of building systems such as electricity, air conditioning, mechanical,
+                                sanitation, etc. <br>
+                                - Preventative maintenance work (PM). <br>
+                                - Repair and fix work (CM). <br>
+                                - Turning of machinery as planned.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </main>
 
 </body>
 
