--- a/index.html
+++ b/index.html
@@ -116,6 +116,17 @@
                     </div>
                 </div>
             </section>
+            <section id="section3">
+                <h2 id="skill">ทักษะและภาษา</h2>
+                <table>
+                    <tbody>
+                        <tr>
+                            <th></th>
+                            <td></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
         </div>
     </main>
 
