- เพิ่มทักษะและภาษา - จัด lay out ทักษะและภาษา - เพิ่ม footer - จัด lay out footer

--- a/index.html
+++ b/index.html
@@ -116,19 +116,69 @@
                     </div>
                 </div>
             </section>
-            <section id="section3">
+            <section class="section-3">
                 <h2 id="skill">ทักษะและภาษา</h2>
                 <table>
                     <tbody>
                         <tr>
-                            <th></th>
-                            <td></td>
+                            <th>Project Planning</th>
+                            <td><progress max="100" value="80"></progress></td>
+                        </tr>
+                        <tr>
+                            <th>Report Writing</th>
+                            <td><progress max="100" value="80"></progress></td>
+                        </tr>
+                        <tr>
+                            <th>Training</th>
+                            <td><progress max="100" value="80"></progress></td>
+                        </tr>
+                        <tr>
+                            <th>Microsoft Office</th>
+                            <td><progress max="100" value="70"></progress></td>
+                        </tr>
+                        <tr>
+                            <th>Microsoft Project</th>
+                            <td> <progress max="100" value="60"></progress></td>
+                        </tr>
+                        <tr>
+                            <th>AutoCAD</th>
+                            <td> <progress max="100" value="50"></progress></td>
+                        </tr>
+                        <tr>
+                            <th>Arduino</th>
+                            <td><progress max="100" value="50"></progress></td>
+                        </tr>
+                        <tr>
+                            <th>Sketup</th>
+                            <td><progress max="100" value="40"></progress></td>
                         </tr>
                     </tbody>
                 </table>
             </section>
         </div>
     </main>
+    <footer>
+        <div class="container">
+            <div class="footer-social">
+                <div class="social">
+                    <a href="https://www.linkedin.com/in/panuwat-khannalae-074b19209/" target="_blank"><img
+                            src="./img/linkin.webp" alt="linkin"></a>
+                    <a href="https://www.facebook.com/panuwat.khannalae" target="_blank"><img src="./img/facebook.webp"
+                            alt="facebook"></a>
+                </div>
+            </div>
+            <div class="footer-contact">
+                <address class="contact">
+                    <a href="mailto:panumataeh@gmail.com">panumataeh@gmail.com</a> <br>
+                    <a href="tel:0961983050">Tel: 096-1983050</a>
+                </address>
+                <a class="download" href="./asset/Panuwat K.,CV (1).pdf" target="_blank">Download CV</a>
+            </div>
+            <div class="back-to-top">
+                <a href="#"><img src="img/back_to_top.png" alt=""></a>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
