--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
         <div class="container">
             <ul>
                 <li>
-                    <a class="nav-menu" href="#about">เกี่ยวกับผม</a>
+                    <a class="nav-menu" href="#about">About</a>
                 </li>
                 <li>
-                    <a class="nav-menu" href="#edu">การศีกษาและประสบการณ์</a>
+                    <a class="nav-menu" href="#edu">Education & Experience</a>
                 </li>
                 <li>
-                    <a class="nav-menu" href="#skill">ทักษะและภาษา</a>
+                    <a class="nav-menu" href="#skill">Skills & Languages</a>
                 </li>
                 <li>
-                    <a class="nav-menu" href="#awards">ผลงานและความสนใจ</a>
+                    <a class="nav-menu" href="#portfolio">Portfolio & Intersts</a>
                 </li>
             </ul>
         </div>
@@ -40,15 +40,15 @@
             <div class="left">
                 <div class="bg-filter">
                     <div class="hello">
-                        <p class="reset-margin">สวัสดีครับ, ผมชื่อ</p>
-                        <h1 class="reset-margin">ภานุวัตร ขันนาแล</h1>
+                        <p class="reset-margin">Hello, My Name is</p>
+                        <h1 class="reset-margin">Panuwat Khannalae</h1>
                         <h4>Web Developer Student</h4>
                     </div>
                 </div>
             </div>
             <div class="right">
                 <img src="img/profile.jpg" alt="Panuwat Khannalae">
-                <h2>ภานุวัตร ขันนาแล</h2>
+                <h2>Panuwat Khannalae</h2>
                 <p>IoT Engineer</p>
                 <address>Bangkok, Thailand</address>
                 <address class="contact">
@@ -68,12 +68,12 @@
     <main>
         <div class="container">
             <section class="section-1">
-                <h2 id="about">เกี่ยวกับผม</h2>
+                <h2 id="about">Abuot</h2>
                 <p>I like to learn new things and can research require knowledge on my own.</p>
             </section>
             <section class="section-2">
                 <div class="edu-left">
-                    <h2 id="edu">การศึกษา</h2>
+                    <h2 id="edu">Education</h2>
                     <div class="blchelor-degree">
                         <h4>2013-2017</h4>
                         <p>Rajamangala University of Technology Lanna Lampang</p>
@@ -89,7 +89,7 @@
                 </div>
                 <div class="wrapper"></div>
                 <div class="exp-right">
-                    <h2>ประสบการณ์</h2>
+                    <h2>Experience</h2>
                     <div class="syslink">
                         <h4>Dec. 2019-April 2022</h4>
                         <p>Syslink Technology Co.,Ltd</p>
@@ -117,7 +117,7 @@
                 </div>
             </section>
             <section class="section-3">
-                <h2 id="skill">ทักษะและภาษา</h2>
+                <h2 id="skill">Skills & Languages</h2>
                 <table>
                     <tbody>
                         <tr>
