- เพิ่มสกิวและภาษา

--- a/index.html
+++ b/index.html
@@ -121,6 +121,18 @@
                 <table>
                     <tbody>
                         <tr>
+                            <th>HTML</th>
+                            <td><progress max="100" value="80"></progress></td>
+                        </tr>
+                        <tr>
+                            <th>CSS</th>
+                            <td><progress max="100" value="60"></progress></td>
+                        </tr>
+                        <tr>
+                            <th>Javascript</th>
+                            <td><progress max="100" value="30"></progress></td>
+                        </tr>
+                        <tr>
                             <th>Project Planning</th>
                             <td><progress max="100" value="80"></progress></td>
                         </tr>
@@ -151,6 +163,20 @@
                         <tr>
                             <th>Sketup</th>
                             <td><progress max="100" value="40"></progress></td>
+                        </tr>
+                        <tr>
+                            <th></th>
+                            <td>
+                                <hr>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>Thai</th>
+                            <td><progress max="100" value="100"></progress></td>
+                        </tr>
+                        <tr>
+                            <th>English</th>
+                            <td><progress max="100" value="60"></progress></td>
                         </tr>
                     </tbody>
                 </table>
