- เพิ่ม Portfolio - เพิ่ม Interests

--- a/index.html
+++ b/index.html
@@ -181,6 +181,26 @@
                     </tbody>
                 </table>
             </section>
+            <section class="section-4">
+                <div class="portfolio-section">
+                    <h2 id="portfolio">Portfolio</h2>
+                    <ul class="dash-list">
+                        <li>Github: <a href="https://github.com/PKAeh/" target="_blank">https://github.com/PKAeh/</a>
+                        </li>
+                        <li>Website: <a href="https://pkaeh.github.io/" target="_blank">https://pkaeh.github.io/</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="interests-section">
+                    <h2>Interests</h2>
+                    <ul class="dash-list">
+                        <li>Reading comic</li>
+                        <li>Play computer games</li>
+                        <li>Swimming</li>
+                        <li>Listen to music</li>
+                    </ul>
+                </div>
+            </section>
         </div>
     </main>
     <footer>
