- จัด layout หน้าตามือถือ

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="edu-left">
                     <h2 id="edu">Education</h2>
                     <div class="blchelor-degree">
-                        <h4>2013-2017</h4>
+                        <h4 class="sub-header">2013-2017</h4>
                         <p>Rajamangala University of Technology Lanna Lampang</p>
                         <p>Bachelor Degree, Industrial Elctrical Technology</p>
                         <p>GPA: 3.29</p>
@@ -91,7 +91,7 @@
                 <div class="exp-right">
                     <h2>Experience</h2>
                     <div class="syslink">
-                        <h4>Dec. 2019-April 2022</h4>
+                        <h4 class="sub-header">Dec. 2019-April 2022</h4>
                         <p>Syslink Technology Co.,Ltd</p>
                         <p>IoT Engineer</p>
                         <p>- Planing with the team and determining how to make things done. <br>
