--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <a href="https://www.facebook.com/panuwat.khannalae" target="_blank"><img src="./img/facebook.webp"
                             alt="facebook"></a>
                 </div>
-                <a class="download" href="./asset/Panuwat K.,CV (1).pdf" target="_blank">Download CV</a>
+                <a class="download" href="./asset/Panuwat K.,CV.pdf" target="_blank">Download CV</a>
             </div>
         </div>
     </header>
@@ -77,7 +77,7 @@
                     <div class="blchelor-degree">
                         <h4 class="sub-header">2013-2017</h4>
                         <p>Rajamangala University of Technology Lanna Lampang</p>
-                        <p>Bachelor Degree, Industrial Elctrical Technology</p>
+                        <p>Bachelor Degree, Industrial Electrical Technology</p>
                         <p>GPA: 3.29</p>
                     </div>
                     <div class="advanced-cer">
@@ -95,7 +95,7 @@
                         <p>Syslink Technology Co.,Ltd</p>
                         <p>IoT Engineer</p>
                         <p>- Planing with the team and determining how to make things done. <br>
-                            - Prepare documents and report to team leader. <br>
+                            - Prepare documents and report to the team leader. <br>
                             - Work together with the team and contractor.<br>
                             - Solve problems on-site to make work complete.<br>
                             - Training how to use device usage.<br>
@@ -218,7 +218,7 @@
                     <a href="mailto:panumataeh@gmail.com">panumataeh@gmail.com</a> <br>
                     <a href="tel:0961983050">Tel: 096-1983050</a>
                 </address>
-                <a class="download" href="./asset/Panuwat K.,CV (1).pdf" target="_blank">Download CV</a>
+                <a class="download" href="./asset/Panuwat K.,CV.pdf" target="_blank">Download CV</a>
             </div>
             <div class="back-to-top">
                 <a href="#"><img src="img/back_to_top.png" alt=""></a>
