- เพิ่ม icon github - เพิ่ม link github

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                             src="./img/linkin.webp" alt="linkin"></a>
                     <a href="https://www.facebook.com/panuwat.khannalae" target="_blank"><img src="./img/facebook.webp"
                             alt="facebook"></a>
+                    <a href="https://github.com/PKAeh/" target="_blank"><img src="./img/github.png" alt="github"></a>
                 </div>
                 <a class="download" href="./asset/Panuwat K.,CV.pdf" target="_blank">Download CV</a>
             </div>
