- แก้ไขข้อความ about

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="container">
             <section class="section-1">
                 <h2 id="about">Abuot</h2>
-                <p>I like to learn new things and can research require knowledge on my own.</p>
+                <p>I like to learn new things and can research the required knowledge on my own.</p>
             </section>
             <section class="section-2">
                 <div class="edu-left">
